# efa_cli

./: .gitignore  README.md  pyproject.toml
application/: login.py  main.py  version.py
application/auth/: auth.py
application/crud/: crud.py
application/crud/groups/: add.py  lst.py
application/crud/metrics/: __init__.py  add.py
application/groups/: __init__.py
application/metrics/: __init__.py  add.py  delete.py  lst.py
configs/: .env.template
